--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.ngrok-free.app https://cdn.jsdelivr.net;">
   <title>Análisis de Trabajos</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     label { display: block; margin-top: 15px; }
@@ -57,6 +58,23 @@
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
+    }
+    .resultado-estilizado h3 {
+      color: #2c3e50;
+      margin: 15px 0;
+      font-size: 1.2em;
+    }
+  
+    .resultado-estilizado p {
+      margin: 10px 0;
+      line-height: 1.5;
+    }
+  
+    .resultado-estilizado code {
+      background: #eef;
+      padding: 2px 5px;
+      border-radius: 3px;
+      font-family: monospace;
     }
   </style>
 </head>
@@ -116,8 +134,12 @@
       }
 
       const datos = await respuesta.json();
-      const htmlContent = marked.parse(datos.detalles.resultadoIA || 'No se recibió respuesta');
-      document.getElementById('resultado').innerHTML = htmlContent;
+
+      const markdownContent = datos.detalles.resultadoIA 
+        ? datos.detalles.resultadoIA.replace(/\\n/g, '\n')  // Convierte \n literales a saltos reales
+        : 'No se recibió contenido';
+
+        document.getElementById('resultado').innerHTML = DOMPurify.sanitize(marked.parse(markdownContent));
 
     } catch (error) {
       console.error('Error:', error);
