--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     body { font-family: Arial, sans-serif; margin: 20px; }
     label { display: block; margin-top: 15px; }
     textarea { width: 100%; height: 100px; }
-    #resultado { margin-top: 20px; padding: 10px; border: 1px solid #ccc; min-height: 50px; }
     
     .resultado-estilizado {
       padding: 20px;
@@ -38,11 +37,13 @@
     .resultado-estilizado li {
       margin: 8px 0;
     }
+
     .cargando {
       color: #3498db;
       text-align: center;
       padding: 20px;
     }
+
     .spinner {
       border: 4px solid #f3f3f3;
       border-top: 4px solid #3498db;
@@ -52,6 +53,7 @@
       animation: spin 1s linear infinite;
       margin: 10px auto;
     }
+
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
@@ -79,57 +81,53 @@
   <div id="resultado" class="resultado-estilizado"></div>
 
   <script>
-    document.getElementById('formulario').addEventListener('submit', async (e) => {
-      e.preventDefault();
+  document.getElementById('formulario').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    
+    const pdfInput = document.getElementById('pdf');
+    if (pdfInput.files[0].type !== 'application/pdf') {
+      alert('Solo se permiten archivos PDF');
+      return;
+    }
 
-      const pdfInput = document.getElementById('pdf');
-      if (pdfInput.files[0].type !== 'application/pdf') {
-        alert('Solo se permiten archivos PDF');
-        return;
+    const formData = new FormData();
+    formData.append('pdf', pdfInput.files[0]);
+    formData.append('rubrica', document.getElementById('rubrica').value);
+    formData.append('notas', document.getElementById('notas').value);
+    formData.append('clave', document.getElementById('clave').value);
+
+    try {
+      document.getElementById('resultado').innerHTML = `
+        <div class="cargando">
+          Analizando documento...
+          <div class="spinner"></div>
+        </div>
+      `;
+
+      const respuesta = await fetch('https://79c5-2806-10a6-e-4b76-d78-502f-27-3bc4.ngrok-free.app/api/process', {
+        method: 'POST',
+        body: formData,
+        mode: 'cors'
+      });
+
+      if (!respuesta.ok) {
+        const errorText = await respuesta.text();
+        throw new Error(`Error ${respuesta.status}: ${errorText}`);
       }
 
-      const formData = new FormData();
-      formData.append('pdf', pdfInput.files[0]);
-      formData.append('rubrica', document.getElementById('rubrica').value);
-      formData.append('notas', document.getElementById('notas').value);
-      formData.append('clave', document.getElementById('clave').value);
+      const datos = await respuesta.json();
+      const htmlContent = marked.parse(datos.detalles.resultadoIA || 'No se recibió respuesta');
+      document.getElementById('resultado').innerHTML = htmlContent;
 
-      try {
-        document.getElementById('resultado').innerHTML = `
-          <div class="cargando">
-            Analizando documento...
-            <div class="spinner"></div>
-          </div>
-        `;
-
-        const respuesta = await fetch('https://79c5-2806-10a6-e-4b76-d78-502f-27-3bc4.ngrok-free.app/api/process', {
-          method: 'POST',
-          body: formData,
-          mode: 'cors'
-        });
-
-        if (!respuesta.ok) {
-          const errorText = await respuesta.text();
-          throw new Error(`Error ${respuesta.status}: ${errorText}`);
-        }
-
-        const datos = await respuesta.json();
-        const markdownContent = datos.detalles.resultadoIA 
-          ? datos.detalles.resultadoIA.replace(/\\n/g, '\n')  // Convierte \n literales a saltos reales
-          : 'No se recibió contenido';
-
-        const htmlContent = marked.parse(markdownContent);
-        document.getElementById('resultado').innerHTML = htmlContent;
-
-      } catch (error) {
-        console.error('Error:', error);
-        document.getElementById('resultado').innerHTML = `
-          <div style="color: red; font-weight: bold;">
-            Error: ${error.message}
-          </div>
-        `;
-      }
-    });
+    } catch (error) {
+      console.error('Error:', error);
+      document.getElementById('resultado').innerHTML = `
+        <div style="color: red; font-weight: bold;">
+          Error: ${error.message}
+        </div>
+      `;
+    }
+  });
   </script>
 </body>
 </html>
